@@ -1,5 +1,7 @@
 New entries should be added at the top
 
+2005-06-19 Added 10.4 support for CocoaAgg. - CM
+
 2005-06-18 Move Figure.get_width_height() to FigureCanvasBase and return
            int instead of float. - SC
 
